# casper

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NEXT_STEPS.md  QUICKSTART.md  README.md  SESSION_SUMMARY.md  test_daemon.rs
casper-core/: Cargo.toml
casper-core/src/: actions.rs  ai.rs  ai_vision.rs  capture.rs  commands.rs  connections.rs  lib.rs  mcp.rs  notifications.rs  screen.rs  tts.rs  voice.rs  window.rs
casper-daemon/: Cargo.toml
casper-daemon/src/: main.rs
casper-tray/: Cargo.toml
casper-tui/: Cargo.toml
casper-tui/src/: main.rs
examples/: ai_vision_usage.md  spotify_daily_mix.md
tests/daemon/client/: Cargo.toml
tests/daemon/client/src/: main.rs
tests/damon/: client.rs
