[package]
name = "casper-core"
version = "0.1.0"
edition = "2024"

[dependencies]
enigo = "0.5.0"              # Mouse/keyboard simulation
notify-rust = "4.0.0"       # Desktop notifications
tokio = { version = "1.46.1", features = ["rt", "net", "io-util"] }  # Async runtime
serde = { version = "1.0.0", features = ["derive"] }  # Serialization
serde_json = "1.0.0"        # JSON handling