[package]
name = "casper-core"
version = "0.1.0"
edition = "2024"

[dependencies]
enigo = "0.5.0"
notify-rust = "4.0.0"
tokio = { version = "1.46.1", features = ["rt-multi-thread", "net", "io-util"] }
serde = { version = "1.0.0", features = ["derive"] }
serde_json = "1.0.0"
reqwest = { version = "0.12.9", features = ["json"] }
